Fix: Logo alignment.

--- a/_sass/abc.scss
+++ b/_sass/abc.scss
@@ -11,6 +11,7 @@
 }
 
 .column {
+    display: flex;
     align-items: center;
     justify-content: center;
     flex: 33.33%;
